--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .app .main-content {
@@ -12,7 +13,7 @@
   flex-direction: column;
   padding: 1rem;
   height: calc(100vh - 9rem);
-  overflow: hidden;
+  overflow-x: hidden;
   gap: 1rem;
   padding-right: 0;
 
@@ -60,8 +61,8 @@
 
 .section .section-body {
   padding: 1rem;
-  height: calc(100vh - 22.5rem);
-  overflow-y: auto;
+  /* height: calc(100vh - 23rem);
+  overflow-y: auto; */
 }
 
 
